--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "dailyhot",
   "description": "今日热榜",
-  "author": "imsyy",
-  "github": "https://github.com/imsyy",
+  "author": "juzi",
+  "github": "https://github.com/1137882300",
   "version": "1.0.0",
   "private": true,
   "scripts": {
